Fix off by one pixel on mobile navbar

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -53,6 +53,7 @@
                   max-width: 87%;
                   padding-right: 0px;
                   padding-left: 6px;
+                  margin-bottom: -1px;
           }
       }
     }
